--- a/algheroXdesign/assets/_colors.scss
+++ b/algheroXdesign/assets/_colors.scss
@@ -7,6 +7,7 @@ $rosso_axd: #FF321C;
 .bg-rosso{background-color: $rosso_axd;}
 .bg-fucsia{background-color: $fucsia_axd;}
 .bg-giallo{background-color: $giallo_axd;}
+.bg-grigio{background-color: $grigio_axd;}
 
 body{
     -webkit-font-smoothing: antialiased;
