--- a/algheroXdesign/assets/css/main.css
+++ b/algheroXdesign/assets/css/main.css
@@ -7,39 +7,27 @@
         text-rendering: optimizeLegibility;
         @apply antialiased;
     }
+
     h1{
-        @apply text-[50px];
-        @apply leading-[101%];
-        @apply tracking-[-.04em];
-        @apply lg:text-[80px];
-        @apply lg:tracking-[-.04em];
+        @apply text-[50px] leading-[101%] tracking-[-.04em] lg:text-[80px] lg:tracking-[-.04em];
+       
+    }
+    h2{
+        @apply text-[35px] leading-[101%] tracking-[-.04em] lg:text-[50px] lg:tracking-[-.04em];
        
     }
     p{
-        @apply text-[25px];
-        @apply leading-[125%];
-        @apply font-[400];
-        @apply tracking-[-.02em];
-        @apply lg:text-[25px];
-        @apply lg:leading-[125%];
-        @apply lg:font-[400];
-        @apply lg:tracking-[-.02em];
+        @apply text-[25px] leading-[125%] font-[400] tracking-[-.025em] lg:text-[25px] lg:leading-[125%] lg:font-[400] lg:tracking-[-.02em];
     }
-    /* h4{
-        @apply text-[25px];
-        @apply leading-[125%];
-        @apply font-[500];
-        @apply tracking-[-.02em];
-        @apply lg:text-[25px];
-        @apply lg:leading-[125%];
-        @apply lg:font-[500];
-        @apply lg:tracking-[-.02em];
+    p.data {
+        @apply text-[12px] leading-[100%] tracking-[0.0em] font-[500] text-gray-300 py-1;
+    
     }
-    h6{
-        @apply text-[16px];
-        @apply leading-[31.25px];
-        @apply font-[500];
-        @apply tracking-[-.02em];
-        
-    } */
+    p.news{
+        @apply leading-[110%];
+    }
+    .button{
+        @apply text-[25px] leading-[125%] font-[400] tracking-[-.04em] lg:text-[25px] lg:leading-[125%] lg:font-[400] lg:tracking-[-.02em] text-white border border-white text-2xl px-4 py-2 rounded-lg hover:bg-black hover:opacity-50;
+    }
+   
 }
