--- a/algheroXdesign/assets/css/main.css
+++ b/algheroXdesign/assets/css/main.css
@@ -43,5 +43,8 @@
     .button{
         @apply text-[25px] leading-[125%] font-[400] tracking-[-.04em] lg:text-[25px] lg:leading-[125%] lg:font-[400] lg:tracking-[-.02em] text-white border border-white text-2xl px-4 py-2 rounded-lg hover:bg-black hover:opacity-50;
     }
+    .button:hover{
+        @apply bg-white text-black opacity-100 border-white;
+    }
    
 }
