--- a/algheroXdesign/assets/css/main.css
+++ b/algheroXdesign/assets/css/main.css
@@ -50,5 +50,11 @@
     .button:hover{
         @apply bg-white text-black opacity-100 border-white;
     }
+    .nome{
+        @apply normal-case text-[16px] font-[500] leading-[115%] mb-0 pt-1;
+     }    
+    .qualifica{
+        @apply normal-case text-[16px] font-[400] leading-[115%] mb-0;
+     }    
    
 }
