--- a/algheroXdesign/assets/css/main.css
+++ b/algheroXdesign/assets/css/main.css
@@ -54,7 +54,7 @@
         @apply normal-case text-[16px] font-[500] leading-[115%] mb-0 pt-1;
      }    
     .qualifica{
-        @apply normal-case text-[16px] font-[400] leading-[115%] mb-0;
+        @apply normal-case text-[16px] font-[400] leading-[115%] mb-0 mt-1;
      }    
    
 }
