--- a/algheroXdesign/assets/css/tailwind.css
+++ b/algheroXdesign/assets/css/tailwind.css
@@ -54,8 +54,14 @@
         @apply normal-case text-[16px] font-[400] leading-[115%] mb-0 mt-1;
      }    
    
+     #news-list {
+        display: none;
+     } 
      #news-list a:hover .news{
         text-decoration: underline;
      } 
+     #main{
+        margin-top: 1rem;
+     }
    
 }
